# Homie

./: .gitignore  BACKLOG.md  README.md  homie.config.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy-website.yml
android/: .gitignore  gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
desktop/: README.md  package.json
desktop/src/: app.js  index.html  settings.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: architecture.md
docs/plans/: 2026-03-10-always-active-intelligence-design.md  2026-03-10-always-active-intelligence.md  2026-03-10-cloud-backend-design.md  2026-03-10-cloud-backend.md  2026-03-10-homie-ai-assistant-design.md  2026-03-10-homie-ai-implementation-plan.md  2026-03-11-neural-phases-2-4.md  2026-03-11-smart-context-engine-design.md  2026-03-11-smart-context-engine.md  2026-03-11-suggestion-action-pipeline.md
docs/superpowers/plans/: 2026-03-12-privacy-secure-storage-layer.md  2026-03-13-heyhomie-website.md  2026-03-13-social-media-browser-web.md  2026-03-13-unified-console.md  2026-03-13-unified-init-screen-reader-service.md  2026-03-13-voice-integration.md  2026-03-14-desktop-cross-platform.md  2026-03-14-msi-installer.md  2026-03-15-core-architecture-refactor.md  2026-03-22-adaptive-learning-engine.md  2026-03-22-performance-self-optimizer.md  2026-03-23-gmail-service-full-integration.md  2026-03-23-model-fine-tuning-pipeline.md  2026-03-26-recursive-finetuning-pipeline.md
docs/superpowers/specs/: 2026-03-12-email-integration-design.md  2026-03-12-privacy-secure-storage-layer-design.md  2026-03-13-heyhomie-website-design.md  2026-03-13-social-media-profiles-design.md  2026-03-13-unified-console-design.md  2026-03-13-unified-init-screen-reader-service-design.md  2026-03-13-voice-integration-design.md  2026-03-14-cross-platform-packaging-design.md  2026-03-14-msi-installer-design.md  2026-03-21-intelligence-layer-design.md  2026-03-22-performance-self-optimizer-design.md  2026-03-23-model-fine-tuning-pipeline-design.md  2026-03-23-neural-reasoning-engine-design.md  2026-04-05-sp1-make-it-work-design.md
installer/: LICENSE.rtf  build_msi.py  homie.spec  product.wxs
installer/macos/: build_dmg.py  com.heyhomie.daemon.plist  homie-macos.spec  uninstall.sh
src/config/: config.py  homie.config.yaml
src/homie/: __init__.py  ai_planner.py  config.py  homie.py  llm_ollama.py  safety.py  ssh_executor.py  utils.py
src/homie/controller/: __init__.py  automations.py  dashboard.py  node_api.py  notifier.py  orchestrator.py  pairing.py  scheduler.py  storage.py
src/homie/node/: __init__.py  app.py  auth.py  executor.py  safety.py  signals.py  status.py  workflows.py
src/homie/plugins/: __init__.py  plugin_clap_audio.py  plugin_clap_audio_classifier.py  plugin_clip_image_tagger.py  plugin_coding_agent.py  plugin_kokoro_tts.py
src/homie/tray/: __init__.py  app.py
src/homie_app/: __init__.py  cli.py  daemon.py  desktop.py  hotkey.py  init.py  loading.py  mic_permission.py  overlay.py
src/homie_app/console/: __init__.py  autocomplete.py  boot.py  console.py  notification_queue.py  rich_console.py  router.py  status_bar.py
src/homie_app/plugins/: browser_plugin.py  clipboard_plugin.py  git_plugin.py  health_plugin.py  ide_plugin.py  music_plugin.py  network_plugin.py  notes_plugin.py  shortcuts_plugin.py  system_plugin.py  terminal_plugin.py  workflows_plugin.py
src/homie_app/prompts/: onboarding.py  reflection.py  system.py
src/homie_app/service/: scheduler_task.py  tray_menu.py
src/homie_app/tray/: app.py  briefing_page.py  chat_page.py  dashboard.py
src/homie_app/wizard/: steps.py
src/homie_core/: __init__.py  cloud_ai.py  cloud_ai_provision.py  config.py  enterprise.py  utils.py
src/homie_core/adaptive_learning/: __init__.py  storage.py
src/homie_core/analytics/: insights.py
src/homie_core/backend/: __init__.py  lan.py  protocol.py  state.py
src/homie_core/behavioral/: base.py  browsing_observer.py  emotional_observer.py  habit_detector.py  media_observer.py  profile_synthesizer.py  routine_observer.py  social_observer.py  work_observer.py
src/homie_core/brain/: agentic_loop.py  builtin_tools.py  cognitive_arch.py  context_compressor.py  iteration_budget.py  model_resolver.py  orchestrator.py  persona.py  planner.py  tool_executor.py  (+2 more)
tests/: test_auth.py  test_ip_policy.py  test_safety.py
tests/integration/: test_console_integration.py  test_desktop_briefing.py  test_finetune_integration.py  test_init_wizard.py  test_knowledge_evolution_lifecycle.py  test_model_evolution_lifecycle.py  test_neural_reasoning_lifecycle.py  test_self_healing_lifecycle.py
tests/unit/: test_config.py  test_config_cloud.py  test_config_models.py  test_daemon.py  test_enterprise.py  test_guardrails.py  test_hotkey.py  test_init_cloud.py  test_loading.py  test_overlay.py  test_tool_executor.py  test_utils.py
website/: astro.config.mjs
(+646 files in other folders)
